--- a/NanaManager/App.xaml
+++ b/NanaManager/App.xaml
@@ -25,6 +25,7 @@
 		<SolidColorBrush x:Key="BlackGlass" Color="#88000000"/>
 		<SolidColorBrush x:Key="Highlight" Color="#AE006B"/>
 		<SolidColorBrush x:Key="TranslucentHighlight" Color="#88AE006B"/>
+		<SolidColorBrush x:Key="GlassHighlight" Color="#22AE006B"/>
 		<SolidColorBrush x:Key="PrimaryIdle" Color="#AE006B"/>
 		<SolidColorBrush x:Key="PrimaryHighlight" Color="#CF228D"/>
 		<SolidColorBrush x:Key="PrimaryPressed" Color="#9D005A"/>
@@ -60,6 +61,37 @@
 			<Style.Triggers>
 				<Trigger Property="IsChecked" Value="True">
 					<Setter Property="Background" Value="{DynamicResource Highlight}"/>
+				</Trigger>
+			</Style.Triggers>
+		</Style>
+		<Style x:Key="Settings Button" TargetType="{x:Type ToggleButton}">
+			<Setter Property="Background" Value="Transparent"/>
+			<Setter Property="Foreground" Value="{DynamicResource LightText}"/>
+			<Setter Property="FontFamily" Value="Segoe UI"/>
+			<Setter Property="HorizontalContentAlignment" Value="Center"/>
+			<Setter Property="VerticalContentAlignment" Value="Center"/>
+			<Setter Property="Focusable" Value="False"/>
+			<Setter Property="Template">
+				<Setter.Value>
+					<ControlTemplate TargetType="{x:Type ToggleButton}">
+						<Border Background="{TemplateBinding Background}" CornerRadius="0,8,8,0">
+							<ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center">
+								<ContentPresenter.Resources>
+									<Style TargetType="{x:Type TextBlock}">
+										<Setter Property="TextWrapping" Value="Wrap"/>
+									</Style>
+								</ContentPresenter.Resources>
+							</ContentPresenter>
+						</Border>
+					</ControlTemplate>
+				</Setter.Value>
+			</Setter>
+			<Style.Triggers>
+				<Trigger Property="IsMouseOver" Value="True">
+					<Setter Property="Background" Value="{DynamicResource GlassHighlight}"/>
+				</Trigger>
+				<Trigger Property="IsChecked" Value="True">
+					<Setter Property="Background" Value="{DynamicResource TranslucentHighlight}"/>
 				</Trigger>
 			</Style.Triggers>
 		</Style>
