--- a/NanaManager/App.xaml
+++ b/NanaManager/App.xaml
@@ -35,6 +35,10 @@
 		<SolidColorBrush x:Key="NavButtonHighlight" Color="#4C747474"/>
 		<SolidColorBrush x:Key="NavButtonPressed" Color="#4C5A5A5A"/>
 		<SolidColorBrush x:Key="NavButtonDisabled" Color="#4C000000"/>
+		<SolidColorBrush x:Key="TextHighlightColor" Color="#FFFF21B8"/>
+		<SolidColorBrush x:Key="TextSelectColor" Color="#FF424242"/>
+		<SolidColorBrush x:Key="CaretColor" Color="#FFF"/>
+		<SolidColorBrush x:Key="TagRejectColor" Color="#88ff1212"/>
 
 		<!--#region Templates-->
 		<ItemsPanelTemplate x:Key="tagViewer">
@@ -42,6 +46,23 @@
 		</ItemsPanelTemplate>
 		<!--#endregion-->
 		<!--#region Styles-->
+		<Style x:Key="Editable Groupbox Textbox" TargetType="{x:Type TextBox}">
+			<Setter Property="Background" Value="Transparent"/>
+			<Setter Property="Foreground" Value="{DynamicResource LightText}"/>
+			<Setter Property="MaxLength" Value="16"/>
+			<Setter Property="FontSize" Value="18"/>
+			<Setter Property="BorderThickness" Value="0"/>
+			<Setter Property="AllowDrop" Value="False"/>
+			<Setter Property="CaretBrush" Value="{DynamicResource CaretColor}"/>
+			<Setter Property="SelectionBrush" Value="{DynamicResource TextHighlightColor}"/>
+			<Setter Property="SelectionTextBrush" Value="{DynamicResource TextSelectColor}"/>
+		</Style>
+		<Style x:Key="Tag Label" TargetType="{x:Type Label}">
+			<Setter Property="Background" Value="{x:Null}"/>
+			<Setter Property="Foreground" Value="{DynamicResource DarkText}"/>
+			<Setter Property="BorderThickness" Value="0"/>
+			<Setter Property="FontSize" Value="14"/>
+		</Style>
 		<Style x:Key="Tag Button" TargetType="{x:Type ToggleButton}">
 			<Setter Property="Background" Value="{x:Null}"/>
 			<Setter Property="Foreground" Value="{DynamicResource LightText}"/>
@@ -185,22 +206,28 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
-        <Style x:Key="Tag Textbox Deselect" TargetType="{x:Type TextBox}">
-            <Setter Property="Background" Value="{x:Null}"/>
-            <Setter Property="Foreground" Value="{DynamicResource DarkText}"/>
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="FontSize" Value="14"/>
+		<Style x:Key="Tag Textbox Deselect" TargetType="{x:Type TextBox}">
+			<Setter Property="Background" Value="{x:Null}"/>
+			<Setter Property="Foreground" Value="{DynamicResource DarkText}"/>
+			<Setter Property="BorderThickness" Value="0"/>
+			<Setter Property="FontSize" Value="14"/>
+			<Setter Property="CaretBrush" Value="{DynamicResource CaretColor}"/>
+			<Setter Property="SelectionBrush" Value="{DynamicResource TextHighlightColor}"/>
+			<Setter Property="SelectionTextBrush" Value="{DynamicResource TextSelectColor}"/>
 			<Style.Triggers>
 				<Trigger Property="IsEnabled" Value="False">
 					<Setter Property="Background" Value="{DynamicResource DarkGlass}"/>
 				</Trigger>
 			</Style.Triggers>
-        </Style>
+		</Style>
 		<Style x:Key="Tag Textbox Select" TargetType="{x:Type TextBox}">
 			<Setter Property="Background" Value="{DynamicResource TranslucentHighlight}"/>
 			<Setter Property="Foreground" Value="{DynamicResource DarkText}"/>
 			<Setter Property="BorderThickness" Value="0"/>
 			<Setter Property="FontSize" Value="14"/>
+			<Setter Property="CaretBrush" Value="{DynamicResource CaretColor}"/>
+			<Setter Property="SelectionBrush" Value="{DynamicResource TextHighlightColor}"/>
+			<Setter Property="SelectionTextBrush" Value="{DynamicResource TextSelectColor}"/>
 			<Setter Property="Template">
 				<Setter.Value>
 					<ControlTemplate TargetType="{x:Type TextBoxBase}">
@@ -223,6 +250,9 @@
 			<Setter Property="Foreground" Value="{DynamicResource DarkText}"/>
 			<Setter Property="BorderThickness" Value="0"/>
 			<Setter Property="FontSize" Value="14"/>
+			<Setter Property="CaretBrush" Value="{DynamicResource CaretColor}"/>
+			<Setter Property="SelectionBrush" Value="{DynamicResource TextHighlightColor}"/>
+			<Setter Property="SelectionTextBrush" Value="{DynamicResource TextSelectColor}"/>
 			<Setter Property="Template">
 				<Setter.Value>
 					<ControlTemplate TargetType="{x:Type TextBoxBase}">
