--- a/NanaManagerAPI/UI/Controls/TagSelector.xaml
+++ b/NanaManagerAPI/UI/Controls/TagSelector.xaml
@@ -35,6 +35,28 @@
 				</Trigger>
 			</Style.Triggers>
 		</Style>
+		<Style x:Key="RejectedTagButton" TargetType="{x:Type ToggleButton}">
+			<Setter Property="Background" Value="{DynamicResource TagRejectColor}"/>
+			<Setter Property="Foreground" Value="{DynamicResource LightText}"/>
+			<Setter Property="FontFamily" Value="Segoe UI"/>
+			<Setter Property="HorizontalContentAlignment" Value="Center"/>
+			<Setter Property="VerticalContentAlignment" Value="Center"/>
+			<Setter Property="Focusable" Value="False"/>
+			<Setter Property="Template">
+				<Setter.Value>
+					<ControlTemplate TargetType="{x:Type ToggleButton}">
+						<Border Background="{TemplateBinding Background}" CornerRadius="8">
+							<ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+						</Border>
+					</ControlTemplate>
+				</Setter.Value>
+			</Setter>
+			<Style.Triggers>
+				<Trigger Property="IsChecked" Value="True">
+					<Setter Property="Background" Value="{DynamicResource Highlight}"/>
+				</Trigger>
+			</Style.Triggers>
+		</Style>
 	</UserControl.Resources>
 	<Grid>
 		<Border x:Name="bdrLoading" Background="{Binding LoadingBrush, ElementName=tagSelectorWindow}">
