--- a/NanaManager/SettingsPages/TagSettings.xaml
+++ b/NanaManager/SettingsPages/TagSettings.xaml
@@ -4,13 +4,20 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:NanaManager.SettingsPages"
+	  xmlns:nmapi="clr-namespace:NanaManagerAPI.UI.Controls;assembly=NanaManagerAPI"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="TagSettings">
+      Title="TagSettings" Loaded="Page_Loaded">
 
 	<ScrollViewer>
 		<StackPanel Orientation="Vertical">
-			
+			<GroupBox Header="Hidden Tags" Background="{DynamicResource LightGlass}" FontSize="18" FontWeight="SemiBold" Foreground="{DynamicResource LightText}">
+				<StackPanel>
+					<CheckBox Content="Show Hidden Tags" IsChecked="False"/>
+					<nmapi:TagSelector x:Name="tslHiddenTags" GroupBoxBrush="{DynamicResource LightGlass}" LoadingBrush="{DynamicResource BlackGlass}" Height="340" TagChecked="TagSelector_TagChecked"/>
+					<Button x:Name="btnAcceptHiddenTags" Style="{DynamicResource Menu Button}" Content="Confirm Tags" IsEnabled="False" HorizontalAlignment="Left" Margin="5,5,0,0" Width="132" Click="btnAcceptHiddenTags_Click"/>
+				</StackPanel>
+			</GroupBox>
 		</StackPanel>
 	</ScrollViewer>
 </Page>
