--- a/NanaManager/App.xaml
+++ b/NanaManager/App.xaml
@@ -78,14 +78,14 @@
 									<VisualState x:Name="Normal"/>
 									<VisualState x:Name="MouseOver">
 										<Storyboard>
-											<ColorAnimationUsingKeyFrames Storyboard.TargetName="Border" Storyboard.TargetProperty="(Panel.Background)">
+											<ColorAnimationUsingKeyFrames Storyboard.TargetName="Border" Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)">
 												<DiscreteColorKeyFrame KeyTime="0" Value="{DynamicResource PrimaryHighlightColor}"/>
 											</ColorAnimationUsingKeyFrames>
 										</Storyboard>
 									</VisualState>
 									<VisualState x:Name="Pressed">
 										<Storyboard>
-											<ColorAnimationUsingKeyFrames Storyboard.TargetName="Border" Storyboard.TargetProperty="(Panel.Background)">
+											<ColorAnimationUsingKeyFrames Storyboard.TargetName="Border" Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)">
 												<DiscreteColorKeyFrame KeyTime="0" Value="{DynamicResource PrimaryPressedColor}"/>
 											</ColorAnimationUsingKeyFrames>
 										</Storyboard>
