--- a/NanaManager/Pages/SettingsPage.xaml
+++ b/NanaManager/Pages/SettingsPage.xaml
@@ -12,7 +12,18 @@
 			<ColumnDefinition/>
 			<ColumnDefinition Width="8*"/>
 		</Grid.ColumnDefinitions>
-		<Frame x:Name="frmSettings" SandboxExternalContent="True" ScrollViewer.CanContentScroll="True" NavigationUIVisibility="Hidden" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Grid.Column="1" Margin="5,0,0,0"/>
+		<Grid Grid.Column="1" Margin="5,0,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+			<Grid.RowDefinitions>
+				<RowDefinition/>
+				<RowDefinition Height="10*"/>
+			</Grid.RowDefinitions>
+			<Border Background="{DynamicResource DarkGlass}" BorderBrush="{DynamicResource Highlight}" BorderThickness="0,0,0,2">
+				<Viewbox>
+					<Label x:Name="lblTitle" Foreground="{DynamicResource LightText}" Content="Title" HorizontalContentAlignment="Center" FontWeight="SemiBold"/>
+				</Viewbox>
+			</Border>
+			<Frame x:Name="frmSettings" SandboxExternalContent="True" ScrollViewer.CanContentScroll="True" NavigationUIVisibility="Hidden" HorizontalContentAlignment="Stretch" Grid.Row="1" VerticalContentAlignment="Stretch"/>
+		</Grid>
 		<Grid>
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="18*"/>
@@ -41,6 +52,7 @@
 						<RowDefinition/>
 					</Grid.RowDefinitions>
 					<!--#region Back button-->
+					<Border Grid.Row="0" Grid.RowSpan="2" Grid.ColumnSpan="2" BorderBrush="{DynamicResource Highlight}" BorderThickness="0,0,0,2"/>
 					<Button Grid.Row="0" Grid.ColumnSpan="2" Grid.RowSpan="2" Margin="0,0,0,5" Click="Button_Click">
 						<Button.Style>
 							<Style TargetType="{x:Type Button}">
@@ -49,7 +61,7 @@
 								<Setter Property="Template">
 									<Setter.Value>
 										<ControlTemplate TargetType="{x:Type Button}">
-											<Border Background="{TemplateBinding Background}" BorderBrush="{x:Null}" >
+											<Border Background="{TemplateBinding Background}" BorderBrush="{x:Null}" CornerRadius="0,15,0,0" >
 												<ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
 											</Border>
 										</ControlTemplate>
@@ -93,10 +105,40 @@
 					<!--#endregion-->
 					<!--#region Languages-->
 					<Border Grid.Row="4" Grid.RowSpan="2" Grid.ColumnSpan="2" BorderBrush="{DynamicResource Highlight}" BorderThickness="0,2,0,2"/>
-					<ToggleButton Grid.Row="4" Grid.ColumnSpan="2" Style="{DynamicResource Settings Button}" Grid.RowSpan="2" Margin="0,5,0,5" Click="ToggleButton_Click" Tag="hydroxa.nanaManager:pg_langsets"/>
-					<Viewbox Grid.Row="4" Grid.ColumnSpan="2" IsHitTestVisible="False">
-						<Label Content="Languages" HorizontalContentAlignment="Center" Foreground="{DynamicResource LightText}" IsHitTestVisible="False" FontSize="15"/>
-					</Viewbox>
+					<ToggleButton Name="tbtLang" Grid.Row="4" Grid.ColumnSpan="2" Style="{DynamicResource Settings Button}" Grid.RowSpan="2" Margin="0,5,0,5" Click="ToggleButton_Click" Tag="hydroxa.nanaManager:pg_langsets">
+						<ToggleButton.Content>
+							<Grid Height="{Binding ElementName=tbtLang, Path=ActualHeight}">
+								<Grid.RowDefinitions>
+									<RowDefinition/>
+									<RowDefinition/>
+								</Grid.RowDefinitions>
+								<Viewbox>
+									<Label Content="Languages" HorizontalContentAlignment="Center" Foreground="{DynamicResource LightText}" IsHitTestVisible="False"/>
+								</Viewbox>
+								<Grid Background="{DynamicResource DarkGlass}" Grid.Row="1" Width="{Binding RelativeSource={RelativeSource Self}, Path=ActualHeight}">
+									<Grid.ColumnDefinitions>
+										<ColumnDefinition Width="1*"/>
+										<ColumnDefinition Width="1*"/>
+										<ColumnDefinition Width="1*"/>
+										<ColumnDefinition Width="1"/>
+									</Grid.ColumnDefinitions>
+									<Grid.RowDefinitions>
+										<RowDefinition Height="1*"/>
+										<RowDefinition/>
+										<RowDefinition/>
+										<RowDefinition Height="1*"/>
+										<RowDefinition Height="1"/>
+									</Grid.RowDefinitions>
+									<Ellipse x:Name="elpLang" IsHitTestVisible="False" Fill="LightBlue" Grid.ColumnSpan="3" Grid.RowSpan="4" Stroke="Black" StrokeThickness="2"/>
+									<!-- I couldn't get paths to scale properly :/ -->
+									<!-- Gotta work out a good symbol for lang -->
+									<Ellipse Grid.Column="1" Margin="0,1" Grid.RowSpan="4" Stroke="Black" StrokeThickness="2"/>
+									<Border BorderBrush="Black" Grid.Row="1" HorizontalAlignment="Stretch" Grid.ColumnSpan="3" Margin="0,0,0,7" BorderThickness="2" ClipToBounds="True" Grid.RowSpan="2" CornerRadius="4,4,0,0"/>
+									<Border BorderBrush="Black" Grid.Row="1" HorizontalAlignment="Stretch" Grid.ColumnSpan="3" Margin="0,7,0,0" BorderThickness="2" ClipToBounds="True" Grid.RowSpan="2" CornerRadius="0,0,4,4"/>
+								</Grid>
+							</Grid>
+						</ToggleButton.Content>
+					</ToggleButton>
 					<!--#endregion-->
 					<!--#region Tags&Groups-->
 					<Border Grid.Row="6" Grid.RowSpan="2" Grid.ColumnSpan="2" BorderBrush="{DynamicResource Highlight}" BorderThickness="0,2,0,2"/>
@@ -104,17 +146,60 @@
 					<Viewbox Grid.Row="6" Grid.ColumnSpan="2" IsHitTestVisible="False">
 						<Label Content="Tags" HorizontalContentAlignment="Center" Foreground="{DynamicResource LightText}" IsHitTestVisible="False" FontSize="15"/>
 					</Viewbox>
+					<Grid Grid.Row="7" Margin="25,8" RenderTransformOrigin="0.5,0.5">
+						<Grid.RenderTransform>
+							<TransformGroup>
+								<RotateTransform Angle="10" CenterX="4" CenterY="4"/>
+							</TransformGroup>
+						</Grid.RenderTransform>
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition/>
+							<ColumnDefinition/>
+							<ColumnDefinition Width="4*"/>
+						</Grid.ColumnDefinitions>
+						<Grid.RowDefinitions>
+							<RowDefinition Height="2*"/>
+							<RowDefinition/>
+							<RowDefinition Height="2*"/>
+						</Grid.RowDefinitions>
+						<Border Background="{DynamicResource Highlight}" IsHitTestVisible="False" CornerRadius="10,0,0,10" Grid.RowSpan="3" Grid.ColumnSpan="3"/>
+						<Ellipse Width="{Binding RelativeSource={RelativeSource Self}, Path=ActualHeight}" Fill="Black" IsHitTestVisible="False" Grid.Column="1" Grid.Row="1"/>
+					</Grid>
 					<!--#endregion-->
 					<!--#region Advanced-->
 					<Border Grid.Row="8" Grid.RowSpan="2" Grid.ColumnSpan="2" BorderBrush="{DynamicResource Highlight}" BorderThickness="0,2,0,2"/>
-					<ToggleButton Grid.Row="8" Grid.ColumnSpan="2" Style="{DynamicResource Settings Button}" Grid.RowSpan="2" Margin="0,5,0,5" Click="ToggleButton_Click" Tag="hydroxa.nanaManager:pg_langsets"/>
+					<ToggleButton Grid.Row="8" Grid.ColumnSpan="2" Style="{DynamicResource Settings Button}" Grid.RowSpan="2" Margin="0,5,0,5" Click="ToggleButton_Click" Tag="hydroxa.nanaManager:pg_soonsets"/>
 					<Viewbox Grid.Row="8" Grid.ColumnSpan="2" IsHitTestVisible="False">
 						<Label Content="Advanced" HorizontalContentAlignment="Center" Foreground="{DynamicResource LightText}" IsHitTestVisible="False" FontSize="15"/>
 					</Viewbox>
 					<!--#endregion-->
 					<!--#region Plugins-->
 					<Border Grid.Row="10" Grid.RowSpan="2" Grid.ColumnSpan="2" BorderBrush="{DynamicResource Highlight}" BorderThickness="0,2,0,0"/>
-					<ToggleButton Grid.Row="10" Grid.ColumnSpan="2" Style="{DynamicResource Settings Button}" Grid.RowSpan="2" Margin="0,5,0,3" Click="ToggleButton_Click" Tag="hydroxa.nanaManager:pg_langsets"/>
+					<ToggleButton Grid.Row="10" Grid.ColumnSpan="2" Grid.RowSpan="2" Margin="0,5,0,0" Click="ToggleButton_Click" Tag="hydroxa.nanaManager:pg_soonsets">
+						<ToggleButton.Style>
+							<Style TargetType="{x:Type ToggleButton}">
+								<Setter Property="Background" Value="Transparent"/>
+								<Setter Property="BorderThickness" Value="0"/>
+								<Setter Property="Template">
+									<Setter.Value>
+										<ControlTemplate TargetType="{x:Type ToggleButton}">
+											<Border Background="{TemplateBinding Background}" BorderBrush="{x:Null}" CornerRadius="0,0,15,0" >
+												<ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+											</Border>
+										</ControlTemplate>
+									</Setter.Value>
+								</Setter>
+								<Style.Triggers>
+									<Trigger Property="IsChecked" Value="True">
+										<Setter Property="Background" Value="{DynamicResource TranslucentHighlight}"/>
+									</Trigger>
+									<Trigger Property="IsMouseOver" Value="True">
+										<Setter Property="Background" Value="{DynamicResource GlassHighlight}"/>
+									</Trigger>
+								</Style.Triggers>
+							</Style>
+						</ToggleButton.Style>
+					</ToggleButton>
 					<Viewbox Grid.Row="10" Grid.ColumnSpan="2" IsHitTestVisible="False">
 						<Label Content="Plugins" HorizontalContentAlignment="Center" Foreground="{DynamicResource LightText}" IsHitTestVisible="False" FontSize="15"/>
 					</Viewbox>
