--- a/NanaManager/Pages/Viewer.xaml
+++ b/NanaManager/Pages/Viewer.xaml
@@ -53,19 +53,61 @@
 			</ListView.ItemsPanel>
 		</ListView>
 		<Ellipse x:Name="elpMenuButton" Fill="{DynamicResource MenuButtonIdle}" HorizontalAlignment="Center" Margin="371,2" Grid.Row="1" Stroke="Black" MouseDown="image_MouseDown" MouseEnter="image_MouseEnter" MouseUp="image_MouseUp" MouseLeave="image_MouseLeave" Width="{Binding ActualHeight, RelativeSource={RelativeSource Self}}" Cursor="Hand"/>
-        <Image Margin="382,11" Grid.Row="1" Source="pack://siteoforigin:,,,/Resources/MenuBars.png" Grid.RowSpan="1" Cursor="Hand" MouseDown="image_MouseDown" MouseEnter="image_MouseEnter" MouseUp="image_MouseUp" MouseLeave="image_MouseLeave"/>
-        <Button x:Name="btnExport" Style="{DynamicResource Menu Button}" IsEnabled="False" Content="Export" FontSize="14" Height="Auto" Margin="0,10,10,10" Grid.Row="1" HorizontalAlignment="Right" Width="96" Click="btnExport_Click"/>
-        <Button x:Name="btnEdit" Style="{DynamicResource Menu Button}" IsEnabled="False" Content="Edit" FontSize="14" Height="Auto" Margin="0,10,111,10" Grid.Row="1" HorizontalAlignment="Right" Width="96" Click="btnEdit_Click"/>
-        <Button x:Name="btnSettings" Style="{DynamicResource Menu Button}" Content="Settings" FontSize="14" Height="Auto" Margin="10,10,0,10" Grid.Row="1" HorizontalAlignment="Left" Width="96" Click="btnSettings_Click"/>
-        <Button x:Name="btnTags" Style="{DynamicResource Menu Button}" Content="Tags" FontSize="14" Height="Auto" Margin="111,10,0,10" Grid.Row="1" HorizontalAlignment="Left" Width="96" Click="btnTags_Click"/>
-        <StackPanel x:Name="stkMenu" HorizontalAlignment="Left" Width="130" Grid.RowSpan="2" Background="{DynamicResource BlackGlass}" >
+		<Image Margin="382,11" Grid.Row="1" Source="pack://siteoforigin:,,,/Resources/MenuBars.png" Grid.RowSpan="1" Cursor="Hand" MouseDown="image_MouseDown" MouseEnter="image_MouseEnter" MouseUp="image_MouseUp" MouseLeave="image_MouseLeave"/>
+		<Button x:Name="btnExport" Style="{DynamicResource Menu Button}" IsEnabled="False" Content="Export" FontSize="14" Height="Auto" Margin="0,10,10,10" Grid.Row="1" HorizontalAlignment="Right" Width="96" Click="btnExport_Click"/>
+		<Button x:Name="btnEdit" Style="{DynamicResource Menu Button}" IsEnabled="False" Content="Edit" FontSize="14" Height="Auto" Margin="0,10,111,10" Grid.Row="1" HorizontalAlignment="Right" Width="96" Click="btnEdit_Click"/>
+		<Button x:Name="btnSettings" Style="{DynamicResource Menu Button}" FontSize="14" Height="Auto" Margin="10,10,0,10" Grid.Row="1" HorizontalAlignment="Left" Width="96" Click="btnSettings_Click">
+			<Button.Content>
+				<StackPanel Orientation="Horizontal">
+					<TextBlock Text="Settings"/>
+					<Grid Width="{Binding RelativeSource={RelativeSource Self}, Path=ActualHeight}" Margin="5,0,0,0">
+						<Ellipse Fill="Gray" Margin="2"/>
+						<Rectangle Fill="Gray" Margin="7,0">
+							<Rectangle.RenderTransform>
+								<RotateTransform Angle="0"/>
+							</Rectangle.RenderTransform>
+						</Rectangle>
+						<Rectangle Fill="Gray" Margin="7,-0.8" RenderTransformOrigin="0.5,0.5">
+							<Rectangle.RenderTransform>
+								<TransformGroup>
+									<ScaleTransform/>
+									<SkewTransform/>
+									<RotateTransform Angle="45"/>
+								</TransformGroup>
+							</Rectangle.RenderTransform>
+						</Rectangle>
+						<Rectangle Fill="Gray" Margin="7,0" RenderTransformOrigin="0.5,0.5">
+							<Rectangle.RenderTransform>
+								<TransformGroup>
+									<ScaleTransform/>
+									<SkewTransform/>
+									<RotateTransform Angle="90"/>
+								</TransformGroup>
+							</Rectangle.RenderTransform>
+						</Rectangle>
+						<Rectangle Fill="Gray" Margin="7,-0.8" RenderTransformOrigin="0.5,0.5">
+							<Rectangle.RenderTransform>
+								<TransformGroup>
+									<ScaleTransform/>
+									<SkewTransform/>
+									<RotateTransform Angle="135"/>
+								</TransformGroup>
+							</Rectangle.RenderTransform>
+						</Rectangle>
+						<Ellipse Fill="DarkGray" Margin="7"/>
+					</Grid>
+				</StackPanel>
+			</Button.Content>
+		</Button>
+		<Button x:Name="btnTags" Style="{DynamicResource Menu Button}" Content="Tags" FontSize="14" Height="Auto" Margin="111,10,0,10" Grid.Row="1" HorizontalAlignment="Left" Width="96" Click="btnTags_Click"/>
+		<StackPanel x:Name="stkMenu" HorizontalAlignment="Left" Width="130" Grid.RowSpan="2" Background="{DynamicResource BlackGlass}" >
 			<StackPanel.RenderTransform>
 				<TranslateTransform X="-130"/>
 			</StackPanel.RenderTransform>
-            <Button x:Name="btnImport" Style="{DynamicResource Menu Button}"  Content="Import" FontSize="14" Click="btnImport_Click"/>
-            <Button x:Name="btnSearch" Style="{DynamicResource Menu Button}" Content="Search" FontSize="14" Margin="5,90,5,5" Click="btnSearch_Click"/>
-            <TextBox x:Name="txtSearch" Margin="5,5,5,0" Foreground="{DynamicResource LightText}" FontSize="14" Background="{DynamicResource MenuButtonIdle}" TextChanged="txtSearch_TextChanged" BorderBrush="{DynamicResource DisabledText}"/>
-            <ListBox x:Name="lstTags" Margin="5" VerticalContentAlignment="Center" Height="239" Background="#FF27282E" Foreground="White"/>
-        </StackPanel>
-    </Grid>
+			<Button x:Name="btnImport" Style="{DynamicResource Menu Button}"  Content="Import" FontSize="14" Click="btnImport_Click"/>
+			<Button x:Name="btnSearch" Style="{DynamicResource Menu Button}" Content="Search" FontSize="14" Margin="5,90,5,5" Click="btnSearch_Click"/>
+			<TextBox x:Name="txtSearch" Margin="5,5,5,0" Foreground="{DynamicResource LightText}" FontSize="14" Background="{DynamicResource MenuButtonIdle}" TextChanged="txtSearch_TextChanged" BorderBrush="{DynamicResource DisabledText}"/>
+			<ListBox x:Name="lstTags" Margin="5" VerticalContentAlignment="Center" Height="239" Background="#FF27282E" Foreground="White"/>
+		</StackPanel>
+	</Grid>
 </Page>
