--- a/NanaManager/SettingsPages/TagSettings.xaml
+++ b/NanaManager/SettingsPages/TagSettings.xaml
@@ -10,7 +10,7 @@
       Title="TagSettings" Loaded="Page_Loaded">
 
 	<ScrollViewer>
-		<StackPanel Orientation="Vertical">
+		<StackPanel Orientation="Vertical" Margin="0,0,5,0">
 			<GroupBox Header="Hidden Tags" Background="{DynamicResource LightGlass}" FontSize="18" FontWeight="SemiBold" Foreground="{DynamicResource LightText}">
 				<StackPanel>
 					<CheckBox x:Name="ckbShowHiddenTags" Content="Show Hidden Tags" IsChecked="False" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked"/>
